[gd_scene load_steps=10 format=3 uid="uid://drcm6lc2w37br"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_573p5"]
[ext_resource type="Texture2D" uid="uid://byubok773wow" path="res://assets/temp/uiborders.png" id="1_lo72j"]
[ext_resource type="Theme" uid="uid://dplwrcgvyhpcw" path="res://assets/ui_theme.tres" id="2_cq5vu"]
[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="3_mre7y"]
[ext_resource type="Script" path="res://scripts/ui/controls_menu.gd" id="4_46yd0"]
[ext_resource type="Script" path="res://scripts/ui/settings_menu.gd" id="6_x0hft"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jyxlk"]
content_margin_top = 16.0
content_margin_bottom = 16.0
texture = ExtResource("1_lo72j")
texture_margin_bottom = 16.0
axis_stretch_horizontal = 1
modulate_color = Color(0, 0, 0, 0.901961)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h8b51"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fhv12"]
bg_color = Color(0, 0, 0, 0.901961)

[node name="pauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 5
script = ExtResource("1_573p5")

[node name="pauseUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_cq5vu")

[node name="inventoryMargin" type="MarginContainer" parent="pauseUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 16

[node name="inventoryBorder" type="Panel" parent="pauseUI/inventoryMargin"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"topBotPanel"

[node name="panelMargin" type="MarginContainer" parent="pauseUI/inventoryMargin/inventoryBorder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="topRow" type="Panel" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jyxlk")

[node name="topRowMargin" type="MarginContainer" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/topRow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 16

[node name="sarpedon" type="Label" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/topRow/topRowMargin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
theme_override_font_sizes/font_size = 32
text = "Σαρπηδών"
horizontal_alignment = 1
vertical_alignment = 1

[node name="menuPanel" type="Panel" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_h8b51")

[node name="mainMenu" type="Control" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_mre7y")

[node name="mainMenuButtons" type="VBoxContainer" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/mainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2
alignment = 1

[node name="playButton" type="Button" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/mainMenu/mainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Play"

[node name="settingsButton" type="Button" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/mainMenu/mainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Settings"

[node name="controlsButton" type="Button" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/mainMenu/mainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Controls"

[node name="creditsButton" type="Button" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/mainMenu/mainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Credits"

[node name="quitButton" type="Button" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/mainMenu/mainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="controlsMenu" type="Control" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_46yd0")

[node name="controlsVbox" type="VBoxContainer" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/controlsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2

[node name="firstRow" type="HBoxContainer" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/controlsMenu/controlsVbox"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="actionText" type="Label" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/controlsMenu/controlsVbox/firstRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
theme_type_variation = &"uiLabel"
theme_override_styles/normal = SubResource("StyleBoxFlat_fhv12")
text = "ACTION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="actionText2" type="Label" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/controlsMenu/controlsVbox/firstRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_type_variation = &"uiLabel"
theme_override_styles/normal = SubResource("StyleBoxFlat_fhv12")
text = "INPUT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="remapScroll" type="ScrollContainer" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/controlsMenu/controlsVbox"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="remapVbox" type="VBoxContainer" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/controlsMenu/controlsVbox/remapScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="settingsMenu" type="Control" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_x0hft")

[node name="ScrollContainer" type="ScrollContainer" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="settingsVbox" type="VBoxContainer" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="sensitivitySlider" type="Panel" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox"]
clip_contents = true
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="HBoxContainer" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/sensitivitySlider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/sensitivitySlider/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"clearUILabel"
text = "Sensitivity"

[node name="MarginContainer" type="MarginContainer" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/sensitivitySlider/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="HSlider" type="HSlider" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/sensitivitySlider/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="audioSlider" type="Panel" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox"]
clip_contents = true
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="HBoxContainer" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/audioSlider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/audioSlider/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"clearUILabel"
text = "Audio Volume"

[node name="MarginContainer" type="MarginContainer" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/audioSlider/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="HSlider" type="HSlider" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/audioSlider/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="musicSlider2" type="Panel" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox"]
clip_contents = true
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="HBoxContainer" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/musicSlider2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/musicSlider2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"clearUILabel"
text = "Music Volume"

[node name="MarginContainer" type="MarginContainer" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/musicSlider2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="HSlider" type="HSlider" parent="pauseUI/inventoryMargin/inventoryBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/musicSlider2/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
